docs: replace mdcslot docs with native `<slot />`

--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -153,10 +153,7 @@ Components that are used in Markdown has to be marked as `global` in your Nuxt a
 
 Block components are components that accept Markdown content or another component as a slot.
 
-The component must contain either:
-
-- A `<slot />` to accept raw text or another component.
-- The [`<MDCSlot />`](/docs/components/mdc-slot) component to accept formatted text.
+The component must contain at least one `<slot />` component to accept formatted text.
 
 In a markdown file, use the component with the `::` identifier.
 
@@ -204,7 +201,7 @@ This will be rendered inside the `description` slot.
 <template>
   <section>
     <h1 class="text-4xl">
-      <MDCSlot unwrap="p" />
+      <slot mdc-unwrap="p" />
     </h1>
     <slot name="description" />
   </section>
@@ -222,7 +219,7 @@ This will be rendered inside the `description` slot.
 ::
 
 ::note
-Read more about the [`<MDCSlot />`](/docs/components/mdc-slot) component.
+Read more about the [`<slot />`](/docs/components/slot) component.
 ::
 
 ::tip
@@ -238,7 +235,7 @@ You can use Markdown inside your components slots:
   ```html [MyTitle.vue]
   <template>
     <h1 class="text-4xl">
-      <MDCSlot unwrap="p" />
+      <slot mdc-unwrap="p" />
     </h1>
   </template>
   ```
@@ -273,7 +270,7 @@ defineProps(['type'])
 
 <template>
   <div :class="[type]">
-    <MDCSlot :use="$slots.default" unwrap="p" />
+    <slot mdc-unwrap="p" />
   </div>
 </template>
 ```
