feat(build): allow modifying `slugify` options

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -234,6 +234,21 @@ export default defineNuxtConfig({
 
 Read more about adding languages in the [Shiki documentation](https://github.com/shikijs/shiki/blob/main/docs/languages.md#adding-grammar).
 
+## `pathMeta`
+
+Content module uses files path to generate the slug, default title and content order, you can customize this behavior with `pathMeta` option.
+
+### `pathMeta.forceLeadingSlash`
+
+If set to `true`, the path will be prefixed with a leading slash. Default value is `true`.
+
+
+### `pathMeta.slugifyOptions`
+
+Content module uses [slugify](https://github.com/simov/slugify) to generate the slug, you can customize the behavior of slugify with this option.
+
+Checkout [slugify options](https://github.com/simov/slugify#options) for more information.
+
 ## `database`
 
 By default Nuxt Content uses a local SQLite database to store and query content. If you like to use another database or you plan to deploy on Cloudflare Workers, you can modify this option.
