docs: update `defineContentConfig`

--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -32,16 +32,18 @@ Create a `content.config.ts` file in your project's root directory. This special
 Here's a basic example:
 
 ```ts [content.config.ts]
-import { defineCollection } from '@nuxt/content'
+import { defineCollection, defineContentConfig } from '@nuxt/content'
 
-export const collections = {
-  docs: defineCollection({
-    // Load every file inside the `content` directory
-    source: '**',
-    // Specify the type of content in this collection
-    type: 'page'
-  })
-}
+export default defineContentConfig({
+  collections: {
+    docs: defineCollection({
+      // Load every file inside the `content` directory
+      source: '**',
+      // Specify the type of content in this collection
+      type: 'page'
+    })
+  }
+})
 ```
 
 ### Collection Schema
@@ -51,20 +53,22 @@ Schemas enforce data consistency within a collection and serve as the source of 
 On top of the [built-in fields](#built-in-fields), you can define a schema by adding the `schema` property to your collection by using a [`zod`](https://zod.dev) schema:
 
 ```ts [content.config.ts]
-import { defineCollection, z } from '@nuxt/content'
+import { defineCollection, defineContentConfig, z } from '@nuxt/content'
 
-export const collections = {
-  blog: defineCollection({
-    source: 'blog/*.md',
-    type: 'page',
-    // Define custom schema for docs collection
-    schema: z.object({
-      tags: z.array(z.string()),
-      image: z.string(),
-      date: z.date()
+export default defineContentConfig({
+  collections: {
+    blog: defineCollection({
+      source: 'blog/*.md',
+      type: 'page',
+      // Define custom schema for docs collection
+      schema: z.object({
+        tags: z.array(z.string()),
+        image: z.string(),
+        date: z.date()
+      })
     })
-  })
-}
+  }
+})
 ```
 
 ::note
