--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -9,15 +9,19 @@ description: Create and query Markdown files in your Nuxt applications and use
 ### Define a Collection
 
 ```ts [content.config.ts]
-export const collections = {
-  blog: defineCollection({
-    type: 'page',
-    source: 'blog/*.md',
-    schema: z.object({
-      date: z.string()
+import { defineCollection, defineContentConfig, z } from '@nuxt/content'
+
+export default defineContentConfig({
+  collections: {
+    blog: defineCollection({
+      type: 'page',
+      source: 'blog/*.md',
+      schema: z.object({
+        date: z.string()
+      })
     })
-  })
-}
+  }
+})
 ```
 
 ::note{to="/docs/collections/types#page-type"}
