--- a/docs/content/docs/3.files/3.json.md
+++ b/docs/content/docs/3.files/3.json.md
@@ -6,17 +6,21 @@ description: How to define, write and query JSON data.
 ## Define Collection
 
 ```ts [content.config.ts]
-export const collections = {
-  authors: defineCollection({
-    type: 'data',
-    source: 'authors/**.json',
-    schema: z.object({
-      name: z.string(),
-      avatar: z.string(),
-      url: z.string()
+import { defineCollection, defineContentConfig, z } from '@nuxt/content'
+
+export default defineContentConfig({
+  collections: {
+    authors: defineCollection({
+      type: 'data',
+      source: 'authors/**.json',
+      schema: z.object({
+        name: z.string(),
+        avatar: z.string(),
+        url: z.string()
+      })
     })
-  })
-}
+  }
+})
 
 ```
 
