--- a/docs/content/docs/2.collections/3.sources.md
+++ b/docs/content/docs/2.collections/3.sources.md
@@ -8,14 +8,16 @@ description: Learn how to import your files in Nuxt Content collections.
 Nuxt Content provides several ways to import content files into your collection. You can configure the source by using the `source` property within `defineCollection`:
 
 ```ts [content.config.ts]
-import { defineCollection } from '@nuxt/content'
+import { defineCollection, defineContentConfig } from '@nuxt/content'
 
-export const collections = {
-  docs: defineCollection({
-    source: '**',
-    type: 'page'
-  })
-}
+export default defineContentConfig({
+  collections: {
+    docs: defineCollection({
+      source: '**',
+      type: 'page'
+    })
+  }
+})
 ```
 
 ## `source`
