--- a/docs/content/docs/6.advanced/2.raw-content.md
+++ b/docs/content/docs/6.advanced/2.raw-content.md
@@ -10,17 +10,20 @@ In order to ship raw contents to production you need to define `rawbody` field i
 Nuxt Content will detect this magical field in your schema and fill it with the raw content.
 
 ```ts [content.config.ts]
-import { defineCollection, z } from '@nuxt/content'
 
-export const collections = {
-  docs: defineCollection({
-    source: '**',
-    type: 'page',
-    schema: z.object({
-      rawbody: z.string()
+import { defineCollection, defineContentConfig, z } from '@nuxt/content'
+
+export default defineContentConfig({
+  collections: {
+    docs: defineCollection({
+      source: '**',
+      type: 'page',
+      schema: z.object({
+        rawbody: z.string()
+      })
     })
-  })
-}
+  }
+})
 ```
 
 And you can use `queryCollection()` to fetch the raw content.
