fix(docs): update import paths in configuration documentation

--- a/docs/content/docs/7.studio/5.config.md
+++ b/docs/content/docs/7.studio/5.config.md
@@ -31,7 +31,7 @@ To create a customized editing experience for your `app.config.ts` in Studio, yo
 - The `field` method allows you to customize inputs (aka leaf).
 
 ```ts [nuxt.schema.ts]
-import { field, group } from '@nuxthq/studio/theme'
+import { field, group } from '@nuxt/content/studio'
 
 export default defineNuxtSchema({
   appConfig: {
@@ -74,7 +74,7 @@ Based on these values, the Studio UI will adapt to display the appropriate input
 Text can be displayed as a select instead on a classical input if you provide a `required` key in the `field()` method:
 
 ```ts [nuxt.schema.ts]
-import { field, group } from '@nuxthq/studio/theme'
+import { field, group } from '@nuxt/content/studio'
 
 export default defineNuxtSchema({
   appConfig: {
