--- a/docs/content/docs/7.studio/3.content.md
+++ b/docs/content/docs/7.studio/3.content.md
@@ -91,7 +91,7 @@ defineProps({
 ```mdc [content/index.md]
 ::home-feature
   ---
-  icon: i-ph-cube
+  icon: i-mdi-vuejs
   ---
   #title
   Embedded Vue components
