--- a/docs/content/docs/6.advanced/2.raw-content.md
+++ b/docs/content/docs/6.advanced/2.raw-content.md
@@ -50,5 +50,5 @@ rawbody: ''
 ```
 
 ::callout
-It is important to fill frontmatter fields with a same type of data that defined in collection schema. In this case `rawbody` is a string, and you should consider passing empry string. Do not use `boolean` or other type of values.
+It is important to fill frontmatter fields with a same type of data that defined in collection schema. In this case `rawbody` is a string, and you should consider passing empty string. Do not use `boolean` or other type of values.
 ::
