fix(docs): spelling mistakes in the migration guide

--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -3,7 +3,7 @@ title: Migration
 description: How to migrate from v2 to v3
 ---
 
-Nuxt Content v3 had been rebuilt from the ground up, resulting in a new library with enhanced capabilities. While we've redesigned concepts and components in a similar way as Content v2, breaking changes are inevitable.
+Nuxt Content v3 has been rebuilt from the ground up, resulting in a new library with enhanced capabilities. While we've redesigned concepts and components in a similar way as Content v2, breaking changes are inevitable.
 
 Don't worry, you don't need to modify your content files, We made sure that Content v3 handles content in the same way as Content v2.
 
@@ -33,7 +33,7 @@ Here is the list of breaking changes in Content v3:
 
 ## Implement Document Driven mode in v3
 
-Implementing document driven mode is Content v3 is quite easy. All you need is to create a catch-all page in Nuxt and fetch contents based on route path.
+Implementing document driven mode in Content v3 is quite easy. All you need is to create a catch-all page in Nuxt and fetch contents based on route path.
 
 ```vue [pages/[...slug\\].vue]
 <script lang="ts" setup>
@@ -56,9 +56,9 @@ const { data: page } = await useAsyncData(route.path, () => {
 
 ## Converting `queryContent` to `queryCollections`
 
-As we mentioned above, `queryContent` is droped in favor of new collection based `queryCollection`. There is two main difference between these two:
+As we mentioned above, `queryContent` is dropped in favor of new collection based `queryCollection`. There are two main differences between these two:
 
-1. `queryCollection` is builting a query for SQL database.
+1. `queryCollection` is building a query for SQL database.
 2. `queryCollection` do the search only inside the specific collection. You should know the collection.
 
 ```ts [Find content with path]
