--- a/docs/content/blog/v2.md
+++ b/docs/content/blog/v2.md
@@ -1,7 +1,8 @@
 ---
 title: Introducing Nuxt Studio v2
 description: We are excited to announce the v2 release of Nuxt Studio, the new editing experience for your Nuxt Content website
-image: /blog/nuxtStudioV2.png
+image:
+  src: /blog/nuxtStudioV2.png
 authors:
   - name: Baptiste Leproux
     avatar:
