fix(docs): should 'stem' be 'name'??

--- a/docs/content/docs/3.files/2.yaml.md
+++ b/docs/content/docs/3.files/2.yaml.md
@@ -49,6 +49,7 @@ Now we can query authors:
 ```ts
 // Find a single author
 const theAuthor = await queryCollection('authors')
+// TODO: should `stem` be `name`?
   .where('stem', '=', 'larbish')
   .first()
 
