--- a/docs/content/docs/3.files/3.json.md
+++ b/docs/content/docs/3.files/3.json.md
@@ -57,6 +57,7 @@ Now we can query authors:
 ```ts
 // Find a single author
 const theAuthor = await queryCollection('authors')
+// TODO: should `stem` be `name`?
   .where('stem', '=', 'larbish')
   .first()
 
