--- a/docs/content/docs/6.advanced/2.raw-content.md
+++ b/docs/content/docs/6.advanced/2.raw-content.md
@@ -39,7 +39,7 @@ const { data } = useAsyncData('page-' + route.path, () => queryCollection('docs'
 </template>
 ```
 
-In case you don't want to ship raw content of a specific file you can add `rawbody: ''` to frontmatter of that file. The auto filled value of `rawbody` is acting like default value and when you define `rawbody` in the frontmater it will overwriten.
+In case you don't want to ship raw content of a specific file you can add `rawbody: ''` to frontmatter of that file. The auto filled value of `rawbody` is acting like default value and when you define `rawbody` in the frontmatter it will overwritten.
 
 ```md [content.md]
 ---
@@ -50,5 +50,5 @@ rawbody: ''
 ```
 
 ::callout
-It is important to fill frontmatter fields with a same type of data that defined in collection schema. In this case `rawbody` is a string, and you should consider passing empty string. Do not use `boolean` or other type of values.
+It is important to fill frontmatter fields with a same type of data that is defined in collection schema. In this case `rawbody` is a string, and you should consider passing empty string. Do not use `boolean` or other type of values.
 ::
