--- a/docs/content/docs/7.studio/2.github.md
+++ b/docs/content/docs/7.studio/2.github.md
@@ -7,7 +7,7 @@ navigation:
 ---
 
 ::tip
-This section explains the syncronization behaviour between Studio and GitHub. However this process is handled directly from the platform and do not require any external action. This page purpose is purely informational.
+This section explains the syncronization behaviour between Studio and GitHub. However this process is handled directly from the platform and does not require any external action. This page purpose is purely informational.
 ::
 
 ## Overview
