fix(docs): make the use of frontmatter consistent

--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -86,15 +86,15 @@ const { data: post } = await useAsyncData(`blog-${slug}`, () => {
 Read more about the [`<ContentRenderer>`](/docs/components/content-renderer) component and [`Prose Components`](/docs/components/prose).
 ::
 
-## Front-matter
+## Frontmatter
 
-Front-matter is a convention of Markdown-based CMS to provide meta-data to pages, like description or title. In Nuxt Content, the front-matter uses the YAML syntax with `key: value` pairs.
+Frontmatter is a convention of Markdown-based CMS to provide meta-data to pages, like description or title. In Nuxt Content, the frontmatter uses the YAML syntax with `key: value` pairs.
 
 These data are available when rendering the content and can store any information that you would need.
 
 ### Syntax
 
-You can declare a front-matter block at the top of the Markdown files in the `content/` directory with the `---` identifier.
+You can declare a frontmatter block at the top of the Markdown files in the `content/` directory with the `---` identifier.
 
 ```md [content/index.md]
 ---
@@ -294,7 +294,7 @@ Oops! An error occurred
 ::
 ```
 
-The `v-bind` shorthand `:` can be also be used to bind a prop to a value in the front matter.
+The `v-bind` shorthand `:` can be also be used to bind a prop to a value in the frontmatter.
 
 ```mdc
 ---
@@ -418,7 +418,7 @@ Attributes work on:
 
 ## Binding Data in Markdown
 
-You can bind data within your Markdown document using the `{{ $doc.variable || 'defaultValue' }}` syntax. These values can be defined in the YAML front matter at the top of the document, within each MDC component, or injected using the `data` prop of the `<ContentRenderer>` component.
+You can bind data within your Markdown document using the `{{ $doc.variable || 'defaultValue' }}` syntax. These values can be defined in the YAML frontmatter at the top of the document, within each MDC component, or injected using the `data` prop of the `<ContentRenderer>` component.
 
 #### Example 1: Define in YAML
 
@@ -518,7 +518,7 @@ Learn how to use `@nuxt/content`.
 Full amount of content beyond the more divider.
 ```
 
-Description property will contain the excerpt content unless defined within the Front Matter props.
+Description property will contain the excerpt content unless defined within the frontmatter props.
 
 If there is no `<!--more-->` divider in the text then excerpt is undefined.
 
