docs: update migration

--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -9,7 +9,7 @@ Don't worry, you don't need to modify your content files, We made sure that Cont
 
 ## Changes
 
-Here is the list of breaking changes in Content v3:
+### Query/Find Contents
 
 - `queryContent()` API is replaced with new `queryCollection()`
   - New API is backed by SQL
@@ -19,17 +19,24 @@ Here is the list of breaking changes in Content v3:
 - Document driven mode is fully dropped, meaning:
   - Markdown files will not convert to Nuxt pages automatically, you need to create pages, see [how](/docs/components/content-renderer#example)
   - `useContent()` composable is removed
-- We simplified rendering components.
-  - `<ContentDoc>`, `<ContentList>`, `<ContentNavigation>` and `<ContentQuery>` components are dropped in v3.
-- `_dir.yml` files are renamed to `.navigation.yml`
-- Multi source is dropped in favor of multi collection.
-- Document `._path` is now renamed to `.path`
 - `searchContent()` is dropped in favor of new api `queryCollectionSearchSections`
   - Full text search can easily be done using this API See [Full-Text Search Snippets](/docs/advanced/fulltext-search)
-- `useContentHelpers()` is removed
+
+### Rendering Components
+
+- Every content should be rendered using `<ContentRenderer>` component. `<ContentDoc>`, `<ContentList>`, `<ContentNavigation>` and `<ContentQuery>` components are dropped in v3.
+- `<ContentSlot>` and `<MDCSlot>` components are not supported in v3. Instead components can simply use Vue's native `<slot>` component.
+  - One of the main reasons for existance of `<ContentSlot>` and `<MDCSlot>` was to manipulate content before rendering and removing wrapping paragraphs from slot content. This unwrapping behavior is now supported via `mdc-unwrap` attribute in `<slot>` component. example: `<slot mdc-unwrap="p" />`
 - We consolidated the `ProsePre`, `ProseCode`, and `ProseCodeInline` components
   - `ProseCodeInline` is now `ProseCode`
   - `ProseCode` is now `ProsePre`
+
+### General Changes
+
+- `_dir.yml` files are renamed to `.navigation.yml`
+- There is no source option in module options, instead you can define multiple source for your collections in `content.config.ts`.
+- Document `._path` is now renamed to `.path`, likewise all internal fields with `_` prefix are removed or renamed.
+- `useContentHelpers()` is removed
 
 ## Implement Document Driven mode in v3
 
