fix(shiki): inline codes syntax highlighting

--- a/playground/content/0.index.md
+++ b/playground/content/0.index.md
@@ -19,6 +19,8 @@ date: 2024-09-23
 - [post](/real-content/post)
 - [query](/real-content/query)
 
+Inline code: `const a = 1`{lang="ts"}
+
 In order to test [Tailwind CSS]{.text-orange-500}, uncomment `@nuxtjs/tailwindcss` in `nuxt.config.ts`.
 
 ```vue [app.vue]
