docs: lint markdown files with mdclint

--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -215,7 +215,7 @@ This will be rendered inside the `description` slot.
   :::preview-card{icon="i-lucide-eye" label="Preview"}
     ::::example-hero
     My Page Title
-    
+
     #description
     This will be rendered inside the `description` slot.
     ::::
@@ -235,7 +235,7 @@ You can use Markdown inside your components slots:
   A [rich text](/) will be **rendered** by the component.
   ::
   ```
-  
+
   ```html [MyTitle.vue]
   <template>
     <h1 class="text-4xl">
@@ -243,7 +243,7 @@ You can use Markdown inside your components slots:
     </h1>
   </template>
   ```
-  
+
     ::::preview-card{icon="i-lucide-eye" label="Preview"}
       :::::example-title
       A [rich text](/) will be **rendered** by the component.
@@ -384,7 +384,7 @@ defineProps({
 
 Attributes are useful for highlighting and modifying part of paragraph. The syntax is nearly similar to inline components and markdown links syntax.
 
-Possible values ​​are all named attributes, classes with the notation `.class-name` and an ID with `#id-name`.
+Possible values are all named attributes, classes with the notation `.class-name` and an ID with `#id-name`.
 
 ::code-group
 ```mdc [index.md]
@@ -402,17 +402,17 @@ In addition to mdc components and `span`, attribute syntax will work on images, 
 ```md [index.md]
 Attributes work on:
 
-- ![](/favicon.ico){style="display: inline; margin: 0;"} image,
+- ![favicon](/favicon.ico){style="display: inline; margin: 0;"} image,
 - [link](#attributes){style="background-color: pink;"}, `code`{style="color: cyan;"},
 - _italic_{style="background-color: yellow; color:black;"} and **bold**{style="background-color: lightgreen;"} texts.
 ```
 
   :::preview-card{prose label="Preview"}
   Attributes work on:
-  
-  - ![](/favicon.ico){style="display: inline; margin: 0;"} image,
+
+  - ![favicon](/favicon.ico){style="display: inline; margin: 0;"} image,
   - [link](#attributes){style="background-color: pink;"}, `code`,
-  - _italic_ and **bold** texts.
+  - *italic* and **bold** texts.
   :::
 ::
 
@@ -420,7 +420,7 @@ Attributes work on:
 
 You can bind data within your Markdown document using the `{{ $doc.variable || 'defaultValue' }}` syntax. These values can be defined in the YAML front matter at the top of the document, within each MDC component, or injected using the `data` prop of the `<ContentRenderer>` component.
 
-#### Example 1: Define in YAML
+### Example 1: Define in YAML
 
 ```mdc
 ---
