--- a/docs/content/docs/4.components/2.prose.md
+++ b/docs/content/docs/4.components/2.prose.md
@@ -89,7 +89,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
   :::preview-card{icon="i-lucide-eye" label="Preview"}
   `code`
-  
+
   `const code: string = 'highlighted code inline'`
   :::
 ::
@@ -102,6 +102,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ```
 
   :::preview-card{.pt-4 label="Preview"}
+  <!-- markdownlint-disable-next-line -->
   # H1 Heading
   :::
 ::
@@ -114,6 +115,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ```
 
   :::preview-card{icon="i-lucide-eye" label="Preview"}
+  <!-- markdownlint-disable-next-line -->
   ## H2 Heading
   :::
 ::
@@ -126,6 +128,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ```
 
   :::preview-card{icon="i-lucide-eye" label="Preview"}
+  <!-- markdownlint-disable-next-line -->
   ### H3 Heading
   :::
 ::
@@ -138,6 +141,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ```
 
   :::preview-card{icon="i-lucide-eye" label="Preview"}
+  <!-- markdownlint-disable-next-line -->
   #### H4 Heading
   :::
 ::
@@ -150,6 +154,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ```
 
   :::preview-card{icon="i-lucide-eye" label="Preview"}
+  <!-- markdownlint-disable-next-line -->
   ##### H5 Heading
   :::
 ::
@@ -162,6 +167,7 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ```
 
   :::preview-card{icon="i-lucide-eye" label="Preview"}
+  <!-- markdownlint-disable-next-line -->
   ###### H6 Heading
   :::
 ::
@@ -179,9 +185,9 @@ Divider above.
 
   :::preview-card{icon="i-lucide-eye" label="Preview"}
   Divider under.
-  
+
   ---
-  
+
   Divider above.
   :::
 ::
@@ -292,12 +298,13 @@ _Just an italic paragraph._
 ```
 
   :::preview-card{icon="i-lucide-eye" label="Preview"}
-  |     |           |             |
-  | --- | --------- | ----------- |
+
   | Key | Type      | Description |
+  | --- | --------- | ----------- |
   | 1   | Wonderful | Table       |
   | 2   | Wonderful | Data        |
   | 3   | Wonderful | Website     |
+
   :::
 ::
 
