--- a/docs/content/docs/7.studio/5.config.md
+++ b/docs/content/docs/7.studio/5.config.md
@@ -25,7 +25,7 @@ export default defineAppConfig({})
 
 To create a customized editing experience for your `app.config.ts` in Studio, you need to create a `nuxt.schema.ts` file in your project. This schema serves as a representation of your `app.config.ts`.
 
-#### Helpers
+### Helpers
 
 - The `group` method allows you to customize parent objects.
 - The `field` method allows you to customize inputs (aka leaf).
