--- a/playground/content/0.index.md
+++ b/playground/content/0.index.md
@@ -3,13 +3,12 @@ title: Index
 date: 2024-09-23
 ---
 
-# 🎨 Documentations
+## 🎨 Documentations
 
 - [Nuxt v3](/nuxt/getting-started/introduction)
 - [Nuxt Content v2](/content-v2/getting-started/installation)
 
-
-# 🎨 Playground
+## 🎨 Playground
 
 - [Playground](/playground)
 - [Query Builder](/query-playground)
