--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -50,7 +50,7 @@ export default defineContentConfig({
 
 Schemas enforce data consistency within a collection and serve as the source of truth for TypeScript types.
 
-On top of the [built-in fields](#built-in-fields), you can define a schema by adding the `schema` property to your collection by using a [`zod`](https://zod.dev) schema:
+On top of the built-in fields, you can define a schema by adding the `schema` property to your collection by using a [`zod`](https://zod.dev) schema:
 
 ```ts [content.config.ts]
 import { defineCollection, defineContentConfig, z } from '@nuxt/content'
