--- a/docs/content/docs/7.studio/1.setup.md
+++ b/docs/content/docs/7.studio/1.setup.md
@@ -80,6 +80,7 @@ The `__studio.json` file is generated but you encounter a `Forbidden error: inva
 This information should be populated automatically in most cases. We support most popular providers (Vercel, Netlify, etc.), but if you're using a non supported provider or a custom one, it may not be fetched correctly.
 ::
 
+<!-- markdownlint-disable-next-line -->
 2. You can manually override this data by setting those configs in your `nuxt.config.ts`:
 
 ```ts [nuxt.config.ts]
@@ -90,11 +91,12 @@ export default defineNuxtConfig({
       gitInfo: {
         name: 'Your repository name',
         owner: 'Your repository owner/organization',
-        url: 'Your GitHub repository URL'    
+        url: 'Your GitHub repository URL'
       }
     }
   }
 })
 ```
 
+<!-- markdownlint-disable-next-line -->
 3. By ensuring these fields are correctly set, you can resolve the `Forbidden error` and successfully enable your site preview on Nuxt Studio. If not, please contact us on the [Discord server](https://discord.gg/sBXDm6e8SP).
