--- a/docs/content/docs/7.studio/6.debug.md
+++ b/docs/content/docs/7.studio/6.debug.md
@@ -19,9 +19,10 @@ It can help if:
 ## Tutorial
 
 ::steps
-### Start by importing your project on Studio.
 
-### Clone your repository on local.
+### Start by importing your project on Studio
+
+### Clone your repository on local
 
 ### Enable the Studio module in development
 
@@ -48,7 +49,8 @@ npx nuxt dev --tunnel
 
 `__studio.json` file should accessible from `https://your-localtunnel-url/__studio.json`
 
-### Copy the tunnel URL and copy it in the self-hosting section of the deployment tab on Studio platform.
+### Copy the tunnel URL and copy it in the self-hosting section of the deployment tab on Studio platform
+
 ::
 
 ::tip
