--- a/docs/content/docs/4.utils/1.query-collection.md
+++ b/docs/content/docs/4.utils/1.query-collection.md
@@ -48,7 +48,7 @@ Create a query builder to search in the specific collection.
 
 Search for contents that have specific `path`. (`path` is an special field in `page` collections which generates based on fs path and can be use as route to render the content)
 
-- Patameter:
+- Parameter:
 - - `path`: The path string to match.
 
 ```ts
