--- a/docs/content/docs/8.studio/1.setup.md
+++ b/docs/content/docs/8.studio/1.setup.md
@@ -48,7 +48,7 @@ Once created, your project URL must be set to enjoy all Studio features, especia
 We are proposing a GitHub Pages deployment. By using it, we will handle all the requirements for you. However, if you want to use the deployment platform of your choice, please follow the simple guideline below.
 ::
 
-To enable the live preview, you just need to activate studio in the content configuration of your fv`nuxt.config.ts` file.
+To enable the live preview, you just need to activate studio in the content configuration of your `nuxt.config.ts` file.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
