--- a/docs/content/docs/8.studio/3.content.md
+++ b/docs/content/docs/8.studio/3.content.md
@@ -28,9 +28,9 @@ Each editor serves its own purpose. Some users are used to code edition, while o
 
 This editor is heavily inspired by Notion, well known for its intuitive design and flexibility. Much like a standard text editor, this editor is designed to be familiar and easy to use. However, it stands out with its additional features that improve the writing experience:
 
-### Front-matter
+### Frontmatter
 
-[Front-matter](/docs/files/markdown#front-matter) is a convention of Markdown-based CMS to provide meta-data to pages, like description or title or any other data you would like to store as `key: value` pair.
+[Frontmatter](/docs/files/markdown#frontmatter) is a convention of Markdown-based CMS to provide meta-data to pages, like description or title or any other data you would like to store as `key: value` pair.
 
 Based on the user [collection and schema](/docs/collections/collections) provided, a form is generated to edit this metadata from the editor.
 
