chore: prefer `collection:parsedFile`

--- a/docs/content/docs/7.advanced/5.hooks.md
+++ b/docs/content/docs/7.advanced/5.hooks.md
@@ -5,14 +5,14 @@ navigation:
   title: Hooks
 ---
 
-## `content:parsed`{lang="ts"}
+## `collection:parsedFile`{lang="ts"}
 
 This hook is called after the content is parsed and before it is saved to the database.
 
 ```ts
 export default defineNuxtConfig({
   hooks: {
-    'content:parsed'(ctx) {
+    'collection:parsedFile'(ctx) {
       // { content: CollectionItemBase, collection: ResolvedCollection }
     }
   }
