chore: use original hook names

--- a/docs/content/docs/7.advanced/5.hooks.md
+++ b/docs/content/docs/7.advanced/5.hooks.md
@@ -5,15 +5,48 @@ navigation:
   title: Hooks
 ---
 
-## `collection:parsedFile`{lang="ts"}
+## `content:file:beforeParse`{lang="ts"}
 
-This hook is called after the content is parsed and before it is saved to the database.
+This hook is called before the content is parsed.
+
+It can be used to modify the raw content from a `file` before it is transformed
+or modify the transform options.
+
+```ts
+export interface FileBeforeParseHook {
+  collection: ResolvedCollection
+  file: ContentFile
+  parserOptions: TransformContentOptions
+}
+```
 
 ```ts
 export default defineNuxtConfig({
   hooks: {
-    'collection:parsedFile'(ctx) {
-      // { content: CollectionItemBase, collection: ResolvedCollection }
+    'content:file:beforeParse'(ctx) {
+      // ...
+    }
+  }
+})
+```
+
+## `content:file:afterParse`{lang="ts"}
+
+This hook is called after the content is parsed and before it is saved to the database.
+
+```ts
+export interface FileAfterParseHook {
+  collection: ResolvedCollection
+  file: ContentFile
+  content: ParsedContentFile
+}
+```
+
+```ts
+export default defineNuxtConfig({
+  hooks: {
+    'content:file:afterParse'(ctx) {
+      // ...
     }
   }
 })
