--- a/docs/content/blog/v2.md
+++ b/docs/content/blog/v2.md
@@ -53,7 +53,7 @@ Medias in the editor are not displayed until you set up the live preview (see se
 
 As the live preview feature requires a deployed URL, we made it as simple as possible to set it up.
 
-While GitHub pages deployment remains available and still does not require any configuration on your end, requirements have been simplified for self-hosted project as we removed the token verification. [Enabling the Studio module](/docs/get-started/setup#enable-the-live-preview) is the **only remaining requirement.**
+While GitHub pages deployment remains available and still does not require any configuration on your end, requirements have been simplified for self-hosted project as we removed the token verification. [Enabling the Studio module](https://nuxt.studio/docs/get-started/setup#enable-the-live-preview) is the **only remaining requirement.**
 
 ::callout
 ---
@@ -66,9 +66,9 @@ It's crucial to use the latest version of the **Studio module** to ensure compat
 
 ### New documentation
 
-With a revamped platform comes a [new documentation](/docs/get-started/introduction). Don't hesitate to check it out to learn everything about the new Studio.
+With a revamped platform comes a [new documentation](https://nuxt.studio/docs/get-started/introduction). Don't hesitate to check it out to learn everything about the new Studio.
 
-Whether you are an [editor](/docs/editors/introduction) or a [developer](/docs/developers/introduction) you now have your dedicated section in the docs.
+Whether you are an [editor](https://nuxt.studio/docs/editors/introduction) or a [developer](https://nuxt.studio/docs/developers/introduction) you now have your dedicated section in the docs.
 
 ### A new direction for Studio
 
