--- a/docs/content/docs/7.advanced/5.hooks.md
+++ b/docs/content/docs/7.advanced/5.hooks.md
@@ -23,7 +23,7 @@ export interface FileBeforeParseHook {
 ```ts
 export default defineNuxtConfig({
   hooks: {
-    'content:file:beforeParse'(ctx) {
+    'content:file:beforeParse'(ctx: FileBeforeParseHook) {
       // ...
     }
   }
