--- a/docs/content/docs/7.advanced/5.hooks.md
+++ b/docs/content/docs/7.advanced/5.hooks.md
@@ -45,7 +45,7 @@ export interface FileAfterParseHook {
 ```ts
 export default defineNuxtConfig({
   hooks: {
-    'content:file:afterParse'(ctx) {
+    'content:file:afterParse'(ctx: FileAfterParseHook) {
       // ...
     }
   }
