--- a/docs/content/docs/7.advanced/5.hooks.md
+++ b/docs/content/docs/7.advanced/5.hooks.md
@@ -13,14 +13,8 @@ It can be used to modify the raw content from a `file` before it is transformed
 or modify the transform options.
 
 ```ts
-export interface FileBeforeParseHook {
-  collection: ResolvedCollection
-  file: ContentFile
-  parserOptions: TransformContentOptions
-}
-```
+import type { FileBeforeParseHook } from '@nuxt/content'
 
-```ts
 export default defineNuxtConfig({
   hooks: {
     'content:file:beforeParse'(ctx: FileBeforeParseHook) {
@@ -35,14 +29,8 @@ export default defineNuxtConfig({
 This hook is called after the content is parsed and before it is saved to the database.
 
 ```ts
-export interface FileAfterParseHook {
-  collection: ResolvedCollection
-  file: ContentFile
-  content: ParsedContentFile
-}
-```
+import type { FileAfterParseHook } from '@nuxt/content'
 
-```ts
 export default defineNuxtConfig({
   hooks: {
     'content:file:afterParse'(ctx: FileAfterParseHook) {
