--- a/docs/content/blog/v2.md
+++ b/docs/content/blog/v2.md
@@ -10,8 +10,12 @@ authors:
     to: https://x.com/_larbish
     username: larbish
 date: 2024-06-13T00:00:00.000Z
-category: Release
+category: studio
 ---
+
+::warning
+This article was published before the merge of the [Content](https://github.com/nuxt/content) and [Studio](https://github.com/nuxtlabs/studio-module) modules on January 6, 2025. As a result, it may contain some inconsistencies. The Studio module is now deprecated and available as an opt-in feature of the Content module. Learn how to enable it in [this guide](/docs/get-started/introduction).
+::
 
 We are excited to announce the release of Nuxt Studio v2, a major update bringing a brand new interface designed specifically for our users, based on their feedback.
 
