--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -118,3 +118,33 @@ Many `ProsePre` components are thin wrappers around the `ProseCode` component. W
 Suggested Changes
 1. Your _current_ `ProseCode` logic should be moved to `ProsePre`
 2. Rename your `ProseCodeInline` component to `ProseCode`
+
+## Mark Components in the `content` folder as global
+
+In v2, all components in the `components/content` folder were automatically marked as global. This allowed you to pass the name of the component as a string to the `is` attribute of the `<component/>` element. In v3, you need to explicitly mark components as global.
+
+- Add this to the top of your `nuxt.config.ts` file:
+
+```ts
+import { createResolver } from '@nuxt/kit';
+
+const { resolve } = createResolver(import.meta.url);
+```
+
+- Add this to the `modules` array in your `nuxt.config.ts` file:
+
+```ts
+export default defineNuxtConfig({
+  // ...
+  modules: [
+    (_, nuxt) => {
+      nuxt.hook('components:dirs', (dirs) => {
+        dirs.unshift({ path: resolve(PATH_TO_GLOBAL_CONTENT_FOLDER), pathPrefix: false, prefix: '', global: true })
+      })
+    }
+  ]
+  // ...
+})
+```
+
+Be sure to replace `PATH_TO_GLOBAL_CONTENT_FOLDER` with the path: E.g: `./app/components/content`
