docs(migration): add note about registering global components under the `Render Components` section

--- a/docs/content/docs/1.getting-started/4.migration.md
+++ b/docs/content/docs/1.getting-started/4.migration.md
@@ -30,6 +30,7 @@ Don't worry, you don't need to modify your content files. We made sure that Cont
 - We consolidated the `ProsePre`, `ProseCode`, and `ProseCodeInline` components
   - `ProseCodeInline` is now `ProseCode`
   - `ProseCode` is now `ProsePre`
+- Components created under the `components/content` directory are no longer automatically registered as global components. You need to register them manually in your Nuxt app. Check out the [Nuxt - Custom Components Directories](https://nuxt.com/docs/guide/directory-structure/components#custom-directories) documentation for more information on how to do so.
 
 ### General Changes
 
@@ -118,33 +119,3 @@ Many `ProsePre` components are thin wrappers around the `ProseCode` component. W
 Suggested Changes
 1. Your _current_ `ProseCode` logic should be moved to `ProsePre`
 2. Rename your `ProseCodeInline` component to `ProseCode`
-
-## Mark Components in the `content` folder as global
-
-In v2, all components in the `components/content` folder were automatically marked as global. This allowed you to pass the name of the component as a string to the `is` attribute of the `<component/>` element. In v3, you need to explicitly mark components as global.
-
-- Add this to the top of your `nuxt.config.ts` file:
-
-```ts
-import { createResolver } from '@nuxt/kit';
-
-const { resolve } = createResolver(import.meta.url);
-```
-
-- Add this to the `modules` array in your `nuxt.config.ts` file:
-
-```ts
-export default defineNuxtConfig({
-  // ...
-  modules: [
-    (_, nuxt) => {
-      nuxt.hook('components:dirs', (dirs) => {
-        dirs.unshift({ path: resolve(PATH_TO_GLOBAL_CONTENT_FOLDER), pathPrefix: false, prefix: '', global: true })
-      })
-    }
-  ]
-  // ...
-})
-```
-
-Be sure to replace `PATH_TO_GLOBAL_CONTENT_FOLDER` with the path: E.g: `./app/components/content`
