--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -17,7 +17,7 @@ Collections organize related items within your project, helping you manage large
 - **Type-safe Queries**: Direct TypeScript integration across all utilities
 - **Automatic Validation**: Ensure data consistency across frontmatter fields and data files (json, yml...)
 - **Advanced Query Builder**: Filter, sort, and paginate your collections with ease
-- **Studio Integration**: Enhanced form generation and optimal editing experience through [Studio](https://nuxt.studio)
+- **Studio Integration**: Enhanced form generation and optimal editing experience through [Studio](https://studio.content.nuxt.com)
 
 Learn more about [Content Collections](/docs/collections/collections).
 
