--- a/docs/content/docs/8.studio/1.setup.md
+++ b/docs/content/docs/8.studio/1.setup.md
@@ -22,7 +22,7 @@ Developers can customize the edition experience and provide tools to the editor 
 
 ## Authentication
 
-The Studio admin is located on [studio.content.nuxt.com](https://nuxt.studio). From there you can either login with GitHub or with Google. Both methods give you the same edition rights but since Studio is [synchronized with GitHub](/docs/studio/github), the repository import must be handled by a GitHub user.
+The Studio admin is located on [studio.content.nuxt.com](https://studio.content.nuxt.com). From there you can either login with GitHub or with Google. Both methods give you the same edition rights but since Studio is [synchronized with GitHub](/docs/studio/github), the repository import must be handled by a GitHub user.
 
 ::warning
 Google authentication is adapted for non technical users. Google users have to join a team with existing projects to edit them.
@@ -33,7 +33,7 @@ Google authentication is adapted for non technical users. Google users have to j
 Once you are logged in the admin, you have the possibility to import your Nuxt Content repository from the interface.
 
 ::tip
-Two options are available, you can either import an existing repository or use one of our [templates](https://nuxt.studio/templates).
+Two options are available, you can either import an existing repository or use one of our [templates](/templates).
 ::
 
 The only requirement is to host your repository on GitHub. From the interface, connect to our [GitHub app](/docs/studio/github), you'll be then able to link a GitHub repository to your Studio project.
