--- a/docs/content/docs/8.studio/3.content.md
+++ b/docs/content/docs/8.studio/3.content.md
@@ -114,7 +114,7 @@ All components in the `/components/content` folder are available in the editor. 
   :::
 ::
 
-::tip{to="https://nuxt.studio/blog/visual-editor"}
+::tip{to="/blog/visual-editor"}
 You want to know how we've built this editor and how it works under the hood? Check this blog post.
 ::
 
